Remove deprecrated method call